# libgroove

./: .gitignore  BUGS  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  TODO  annotated.html  annotated.js  build.zig  build.zig.ini  build.zig.zon  classes.html  dir_5060f85c5137fe53273a74b31a004c22.html  encoder_8h.html  encoder_8h.js  encoder_8h_source.html  examples.html  examples.js  files.html  files.js  fingerprint_8c-example.html  fingerprinter_8h.html  fingerprinter_8h.js  fingerprinter_8h_source.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  groove_8h.html  groove_8h.js  groove_8h_source.html  index.html  loudness_8h.html  loudness_8h.js  loudness_8h_source.html  metadata_8c-example.html  (+34 more)
cmake/: FindChromaprint.cmake  FindDL.cmake  FindLibAV.cmake  FindSDL2.cmake  FindYasm.cmake  Findebur128.cmake  Findmp3lame.cmake
doc/: FindGroove.cmake  doxygen.conf.in
example/: accoustid.c  fingerprint.c  identify.c  metadata.c  metadata_checksum.c  play.c  playlist.c  replaygain.c  transcode.c  waveform.c
groove/: buffer.c  buffer.h  config.h.in  encoder.c  encoder.h  file.c  file.h  fingerprinter.c  fingerprinter.h  global.c  groove.h  loudness.h  player.c  player.h  playlist.c  queue.h  waveform.h
groove/src/: encoder.h  file.h  groove.h  osx_time_shim.c
groovefingerprinter/: fingerprinter.c  fingerprinter.h
grooveloudness/: loudness.c  loudness.h
grooveplayer/: mach_gettime.c  mach_gettime.h  mach_settime.c  mach_settime.h  osx_time_shim.h  player.c  player.h
include/: groove.h
src/: atomic_value.hpp  atomics.hpp  buffer.c  buffer.cpp  buffer.h  buffer.hpp  chromaprinter.c  config.h.in  decode.c  decode.h  device_sink.c  encoder.c  encoder.cpp  ffmpeg.hpp  file.c  file.cpp  file.h  file.hpp  fingerprinter.c  fingerprinter.cpp  gain_analysis.c  gain_analysis.h  global.c  global.cpp  groove.c  groove.cpp  groove.h  groove.hpp  groove_private.h  list.hpp  loudness.cpp  loudness_detector.c  os.cpp  os.hpp  player.c  player.cpp  playlist.c  playlist.cpp  queue.c  queue.cpp  (+9 more)
